syntax="proto3";
package proto;

option go_package = "./proto/restaurant";
import "google/api/annotations.proto";

message Address {
    string streetName = 1;
    string pincode = 2;
    string city = 3;
    string country = 4;
}
message Restaurant {
    string restaurantName = 1;
    Address restaurantAddress = 2;
    string restaurantPhoneNumber = 3;
    string restaurantAvailability = 4;
    float  restaurantRating = 5;
    string restaurantImageUrl = 6;
    string restaurantOwnerMail = 7;
    string restaurantOperationDays =8;
    string restaurantOperationHours =9;
}
message RestaurantItem {
    string restaurantItemName = 1;
    int64 restaurantItemPrice = 2;
    string restaurantItemCategory = 3;
    string restaurantItemCuisineType = 4;
    string restaurantName = 5;
    bool   restaurantItemVeg = 6;
    string restaurantItemImageUrl = 7;
}
message addRestaurantData {
    Restaurant restaurant = 1;
}
message getAllRestaurantsData {
    int64 totalRestaurants = 1;
    repeated Restaurant restaurants = 2;
}
message restaurantItemData {
    int64 totalRestaurantItems = 1;
    repeated RestaurantItem restaurantItems = 2;
    string restaurantName = 3;
}
message AddRestaurantRequest {
    Restaurant restaurant = 1;
}

message AddRestaurantResponse {
    addRestaurantData data = 1;
    string message = 2;
    int64 statusCode = 3;
    string error = 4;
}

message UpdateRestaurantRequest {
    string restaurantName = 1;
    string restaurantAddress = 2;
    string restaurantPhone = 3;
    string restaurantAvailability = 4;
    string restaurantCity = 5;
    string restaurantImageUrl = 6;
}
message UpdateRestaurantResponse {
    string message = 1;
    int64 statusCode = 2;
    string error = 3;
}
message AddRestaurantItemRequest {
    string restaurantItemName = 1;
    int64 restaurantItemPrice = 2;
    string restaurantName = 3;
    string restaurantItemImageUrl = 4;
}
message AddRestaurantItemResponse {
    string message = 1;
    int64 statusCode = 2;
    string error = 3;
}
message UpdateRestaurantItemRequest {
    string restaurantItemName = 1;
    int64 restaurantItemPrice = 2;
    string restaurantName = 3;
    string restaurantItemImageUrl = 4;
}
message UpdateRestaurantItemResponse {
    string message = 1;
    int64 statusCode = 2;
    string error = 3;
}
// message GetAllRestaurantItemsRequest {
//     repeated Restaurant restaurants = 1;
// }
// message GetAllRestaurantItemsResponse {
//     restaurantItemData data = 1;
//     string message = 2;
//     int64 statusCode = 3;
//     string error = 4;
// }
message GetAllRestaurantsRequest {}

message GetAllRestaurantsResponse {
    getAllRestaurantsData data = 1;
    string message = 2;
    int64 statusCode = 3;
    string error = 4;
}
message DeleteRestaurantItemRequest {
    string restaurantName = 1;
    string restaurantItemName = 2;
}
message DeleteRestaurantItemResponse {
    string message = 1;
    int64 statusCode = 2;
    string error = 3;
}
message GetRestaurantsByCityRequest {
    string city = 1;
}
message GetRestaurantsByCityResponse {
    getAllRestaurantsData data = 1;
    string message = 2;
    int64 statusCode = 3;
    string error = 4;
}
message GetRestaurantsByRestaurantItemRequest {
    string restaurantItemName = 1;
}
message GetRestaurantsByRestaurantItemResponse {
    repeated Restaurant restaurants = 1;
    string message = 2;
    int64 statusCode = 3;
    string error = 4;
}
service RestaurantService {
    rpc AddRestaurant(AddRestaurantRequest) returns (AddRestaurantResponse){
        option (google.api.http) = {
            post: "/api/restaurant/add"
            body: "*"
        };
    }
    rpc UpdateRestaurant(UpdateRestaurantRequest) returns (UpdateRestaurantResponse){
        option (google.api.http) = {
            put: "/restaurant/update"
            body: "*"
        };
    }
    rpc AddRestaurantItem(AddRestaurantItemRequest) returns (AddRestaurantItemResponse){
        option (google.api.http) = {
            post: "/restaurant/item/add"
            body: "*"
        };
    }
    rpc UpdateRestaurantItem(UpdateRestaurantItemRequest) returns (UpdateRestaurantItemResponse){
        option (google.api.http) = {
            put: "/restaurant/item/update"
            body: "*"
        };
    }
    // rpc GetAllRestaurantItems(GetAllRestaurantItemsRequest) returns (GetAllRestaurantItemsResponse){
    //     option (google.api.http) = {
    //         get: "/api/restaurant/{restaurantName}/items"
    //     };
    // }
    rpc GetAllRestaurants(GetAllRestaurantsRequest) returns (GetAllRestaurantsResponse){
        option (google.api.http) = {
            get: "/api/restaurants"
        };
    }
    rpc DeleteRestaurantItem(DeleteRestaurantItemRequest) returns (DeleteRestaurantItemResponse){
        option (google.api.http) = {
            delete:"/{restaurantName}/delete/{restaurantItemName}"
        };
    };
    rpc GetRestaurantsByCity(GetRestaurantsByCityRequest) returns (GetRestaurantsByCityResponse){
        option (google.api.http) = {
            get: "/restaurants/city/{city}"
        };
    }
    rpc GetRestaurantsByRestaurantsItem(GetRestaurantsByRestaurantItemRequest) returns (GetRestaurantsByRestaurantItemResponse){
        option (google.api.http) = {
            get: "/restaurants/item/{restaurantItemName}"
        };
    }
}

// {
//     "restaurantId": "1",
//     "restaurantName": "The Pizza Kings",
//     "restaurantAddress": {
//         "streetNumber": "12/92",
//         "streetName": "Babar Pur, Shahdara, Geeta Colony",
//         "city": "Delhi",
//         "country": "India"
//     },
//     "restaurantRating": 3.6,
//     "restaurantDiscount": 12,
//     "restaurantAvailability": true,
//     "restaurantImage": "restaurant_1.png",
//     "restaurantOperationDays": "Mon-Fri",
//     "restaurantOperationHours": "10:00AM-11:00PM",
//     "restaurantItems": [
//         {
//             "restaurantItemId": "1_1",
//             "restaurantItemName": "Margherita Pizza",
//             "restaurantItemPrice": 390,
//             "restaurantItemCategory": "Pizza",
//             "restaurantItemImageUrl": "restaurant_1_menu_1.png",
//             "restaurantItemCuisineType": "North Indian",
//             "restaurantItemVeg": true
//         }
//     ]
// },